shared/tests/errors/ctor_anon.stderr
error[E0425]: cannot find function `foo` in this scope
  --> tests/errors/ctor_anon.rs:18:5
   |
18 |     foo();
   |     ^^^ not found in this scope
